--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <img src="Untitled-1.png">
 
-<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><B>FREE COOKIES</B></a> 
+<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><B>FREE VODKA</B></a> 
 
 </body>
 
